Bug 170324 - Zoom reverts back to 100% when going to next slide in edit mode
Summary: Zoom reverts back to 100% when going to next slide in edit mode
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Mohit Marathe
URL:
Whiteboard: target:26.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Zoom
  Show dependency treegraph
 
Reported: 2026-01-13 11:00 UTC by Regina Henschel
Modified: 2026-01-28 13:15 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example to show the problem (179.50 KB, application/vnd.oasis.opendocument.presentation)
2026-01-13 11:00 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2026-01-13 11:00:24 UTC
Created attachment 205032 [details]
Example to show the problem

Open attached file. Use edit mode. Show Rulers. Go to first slide. Set the Zoom to 50%.

Now press the PgDown-Button to go to next slide. Error: The Zoom reverts to 100%.

I see the error is current build of master: Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: faddfc794298e2c6e17ba5f47190153f126ca334
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

It is OK in Version: 26.2.0.0.beta1 (X86_64)
Build ID: 620(Build:0)
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded
Comment 1 raal 2026-01-13 17:22:48 UTC
Confirm with Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 7f660cc7544889a3171e29a6d5c9100ed7f41448
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 2 raal 2026-01-13 17:29:21 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-26.8$.
Adding Cc: to Mohit Marathe ; Could you possibly take a look at this one?
Thanks
 a5820ea4413c893f42344efaab5fe0bcf26f5106 is the first bad commit
commit a5820ea4413c893f42344efaab5fe0bcf26f5106
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue Jan 13 14:25:21 2026 +0100

    source fbfd0848af043530e07ffda51f640425dd3158ac

196814: sd: better default zoom for canvas and non-canvas pages | https://gerrit.libreoffice.org/c/core/+/196814
Comment 3 LeroyG 2026-01-19 22:52:22 UTC
(In reply to Regina Henschel from comment #0)
> Open attached file. Use edit mode. Show Rulers. Go to first slide. Set the
> Zoom to 50%.
> 
> Now press the PgDown-Button to go to next slide. Error: The Zoom reverts to
> 100%.
What if do you set the zoom to 50% in the second slide, then press PgUp? (Sorry, but I can't test with 26.8 now.)
> PgDown-Button
That's a toolbar button or the keyboard key?
Comment 4 Regina Henschel 2026-01-19 23:47:52 UTC
(In reply to LeroyG from comment #3)
> (In reply to Regina Henschel from comment #0)
> > Open attached file. Use edit mode. Show Rulers. Go to first slide. Set the
> > Zoom to 50%.
> > 
> > Now press the PgDown-Button to go to next slide. Error: The Zoom reverts to
> > 100%.
> What if do you set the zoom to 50% in the second slide, then press PgUp?

First slide is shown in 100%.

> (Sorry, but I can't test with 26.8 now.)
> > PgDown-Button
> That's a toolbar button or the keyboard key?

keyboard key.

Error is the same, if I use the "next slide" and "previous slide" buttons of the Navigator.
Comment 5 Commit Notification 2026-01-28 13:14:11 UTC
Mohit Marathe committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2e70915c59c1540160c1608d964af0c760c3ee0

tdf#170324 sd: only trigger auto zoom change when switching to or from

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.