tdf#170324 sd: only trigger auto zoom change when switching to or from

canvas page.
Also, call RememberPageZoom from a more general place i.e.
*ViewShell::SetZoom, so that page zoom is remembered when zoom is
changed via any method.

Signed-off-by: Mohit Marathe <mohit.marathe@collabora.com>
Change-Id: Ib9a4efc6b641b1f52d263f4cc903ebc90630340b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198253
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit e2e70915c59c1540160c1608d964af0c760c3ee0)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198292
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>