sd/source/ui/view/viewshe2.cxx
@@ -404,6 +404,7 @@ void ViewShell::SetZoom(::tools::Long nZoom)
     }
 
     UpdateScrollBars();
+    RememberPageZoom(nZoom);
 }
 
 ::tools::Long ViewShell::GetZoom() const
